# ufocr

./: .gitignore  CMakeLists.txt  README.md
src/: BlockAnalysis.cpp  BlockAnalysis.h  QBusyIndicator.cpp  QBusyIndicator.h  SkewAnalysis.cpp  SkewAnalysis.h  SystemTray.cpp  SystemTray.hpp  autosaver.cpp  autosaver.h  busyform.cpp  busyform.h  busyform.ui  configdialog.cpp  configdialog.h  configdialog.ui  djvu2pdf.cpp  djvu2pdf.h  droplabel.cpp  droplabel.h  extprocessdialog.cpp  extprocessdialog.h  extprocessdialog.ui  fileobjectitem.cpp  fileobjectitem.h  ghostscr.cpp  ghostscr.h  globallock.cpp  globallock.h  langselectdialog.cpp  langselectdialog.h  langselectdialog.ui  loadprojectdialog.cpp  loadprojectdialog.h  logger.cpp  logger.hpp  main.cpp  mainform.cpp  mainform.h  mainform.ui  (+63 more)
src/core/: Binarization.cpp  BlurDetection.cpp  ColorBalance.cpp  ColorBalance.hpp  Cropping.cpp  Cropping.hpp  Denoising.cpp  Deskew.hpp  GeneralImage.cpp  ImageProcessing.hpp  Smoothing.hpp  Thinning.cpp  Thinning.hpp  Warp.cpp  Warp.hpp  analysis.cpp  analysis.h  binarize.cpp  binarize.h  ccbuilder.cpp  ccbuilder.h  common.h  imageprocessor.cpp  imageprocessor.h  pageanalysis.cpp  pageanalysis.h  pixelwindow.cpp  pixelwindow.h  qipblackandwhiteimage.cpp  qipblackandwhiteimage.h  qipgrayscaleimage.cpp  qipgrayscaleimage.h  rotationcropper.cpp  rotationcropper.h  subimagepp.cpp  subimagepp.h  subpagepp.cpp  subpagepp.h  tableanalizer-1.cpp  tableanalizer-1.h  (+4 more)
src/isrc/MAFY/: README
src/translations/: ts_update.sh  yagf_fr.ts  yagf_ru.ts  yagf_uk.ts
test/: multiple_page.djvu  multiple_page.tif  one_page.djvu  one_page.pbm  one_page.pgm  one_page.xbm  one_page.xpm
